@@ -1,5 +1,6 @@
 from opengever.document.extra_mimetypes import register_additional_mimetypes
 from opengever.document.officeconnector import register_ee_filename_callback
+from Products.CMFCore.permissions import ManagePortal
 from zope.i18nmessageid import MessageFactory
 
 
@@ -13,3 +14,17 @@ register_additional_mimetypes()
 # Register a callback function for ZEM generation in Products.ExternalEditor
 # to include a document's filename in the metadata.
 register_ee_filename_callback()
+
+
+def initialize(context):
+    """Registers modifiers with zope (on zope startup).
+    """
+    from opengever.document.modifiers import modifiers
+
+    for m in modifiers:
+        context.registerClass(
+            m['wrapper'], m['id'],
+            permission=ManagePortal,
+            constructors=(m['form'], m['factory']),
+            icon=m['icon'],
+        )
