@@ -1,11 +1,17 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
+    xmlns:five="http://namespaces.zope.org/five"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     xmlns:i18n="http://namespaces.zope.org/i18n"
     xmlns:vdex="http://namespaces.zope.org/vdex"
     xmlns:plone="http://namespaces.plone.org/plone"
     xmlns:browser="http://namespaces.zope.org/browser"
     i18n_domain="opengever.document">
+
+  <five:registerPackage
+      package="."
+      initialize=".initialize"
+      />
 
   <include package="collective.vdexvocabulary" file="meta.zcml" />
 
